[package]
name = "shunyata"
version = "0.1.0"
authors = ["Erick Daniel Corona"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
json = "0.12.4"
rand = "0.7"
bitvec = "0.17.4"
rand_distr = "0.2.2"
